# usbaudio-sniffer

./: Cargo.toml  README.md
src/: audio.rs  main.rs  sniffer.rs
