[package]
name = "usbaudio-sniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitfield = "0.19"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
env_logger = "0.11"
futures = "0.3"
hexdump = "0.1"
log = "0.4"
nusb = { version = "0.2.0-beta.2", features = ["tokio"] }
pipewire = "0.8"
tokio = { version = "1.46", features = ["io-util", "macros", "rt"] }
